add testing, postman collection
