# docs/swagger.json
@@ -85,7 +85,7 @@
                 }
             }
         },
-        "/stock": {
+        "/stock/{id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -96,13 +96,11 @@
                 "summary": "Получение кол-ва оставшихся товаров на складе",
                 "parameters": [
                     {
+                        "type": "integer",
                         "description": "ID склада",
-                        "name": "object",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Stock"
-                        }
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -163,17 +161,6 @@
                         "$ref": "#/definitions/model.Products"
                     }
                 },
-                "stock_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "model.Stock": {
-            "type": "object",
-            "required": [
-                "stock_id"
-            ],
-            "properties": {
                 "stock_id": {
                     "type": "integer"
                 }
